Speaking icon fix with alignment fixes

--- a/src/app/modal-components/video-call/video-call.component.scss
+++ b/src/app/modal-components/video-call/video-call.component.scss
@@ -60,7 +60,7 @@
     .call-duration {
       position: absolute;
       top: 5px;
-      left: 50%;
+      left: 40%;
       transform: translateX(-50%);
       display: flex;
       flex-direction: column;
@@ -391,5 +391,11 @@
     top: 30px;
     font-size: 18px;
     font-family: lato;
+  }
+}
+
+@media (max-width: 768px) {
+  .call-duration {
+    left: 50% !important;
   }
 }
